# aklp-cli

./: .env.example  CHANGELOG.md  README.md  RELEASE.md  install.sh  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  pr-title.yml  release-please.yml
src/aklp/: __init__.py  __main__.py  cli.py  config.py  executor.py  history.py  k8s.py  models.py  secrets.py  setup.py
src/aklp/commands/: __init__.py  agent.py  batch.py  config.py  file.py  note.py  task.py  usage.py
src/aklp/services/: __init__.py  agent.py  batch.py  file.py  llm.py  note.py  task.py  usage.py
src/aklp/ui/: __init__.py  display.py
