[project]
name = "aklp"
version = "0.1.0"
description = "FastAPI MSA-based CLI Agent for automated task execution"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "AKLP Team" }
]
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "tomli-w>=1.0.0",
    "kubernetes>=33.1.0",
]

[project.scripts]
aklp = "aklp.cli:app"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aklp"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
